[package]
name = "plugin-build"
version = "0.1.0"
edition = "2021"
publish = false
description = "Build and publish appz WASM plugins to CDN"

[[bin]]
name = "plugin-build"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem"] }
pkcs8 = "0.10"
tokio = { workspace = true, features = ["full"] }
miette = { workspace = true }
thiserror = "1.0"
aws-config = "1.5"
aws-sdk-s3 = "1.65"
