[package]
name = "site-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI-powered website creation, redesign, and cloning pipeline"

[dependencies]
ai = { path = "../ai" }
sandbox = { path = "../sandbox" }
init = { path = "../init" }
command = { path = "../command" }
common = { path = "../common" }
ui = { path = "../ui" }
env_var = { path = "../env_var" }
async-trait = "0.1"
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
